# RedPen

./: .gitignore  README.md  scan.ps1  scan.sh
Scanner/: .gitignore  cmds.txt  process_results.py  pyproject.toml  scan.sh  scanner.py
Scanner/testApi/: api.py
armoriq/: .env.example  .gitignore  armor.py  cli.js  package-lock.json  package.json  remediate.js
backend/: .env.example  .gitignore  Dockerfile  database.py  gemini_summary.py  main.py  pyproject.toml  requirements.txt
frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json
frontend/public/: result.json
frontend/src/: App.css  App.jsx  api.js  index.css
frontend/src/components/: CodeSnippet.css  CodeSnippet.jsx  ScanForm.css  ScanForm.jsx  SeverityBadge.css  SeverityBadge.jsx  StatsPanel.css  StatsPanel.jsx  VulnerabilityCard.css  VulnerabilityCard.jsx
frontend/src/components/CardSwap/: CardSwap.css  CardSwap.jsx
frontend/src/components/CodeViewer/: CodeViewer.css  CodeViewer.jsx
frontend/src/components/FileTree/: FileTree.css  FileTree.jsx
frontend/src/components/PrismaticBurst/: PrismaticBurst.jsx
frontend/src/components/RemediationModal/: RemediationModal.css  RemediationModal.jsx
frontend/src/components/ScanProgress/: ScanProgress.css  ScanProgress.jsx
frontend/src/components/ShapeGrid/: ShapeGrid.jsx
frontend/src/pages/: HomePage.css  HomePage.jsx  ResultsPage.css  ResultsPage.jsx  ScanResultsPage.css  ScanResultsPage.jsx
